--- a/style.css
+++ b/style.css
@@ -265,9 +265,11 @@
 }
 
 .dropdown-item:hover {
-  background-color: #f5f5f5;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  /* background-color: #f5f5f5;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05); */
   transform: translateY(-2px);
+  color: var(--color-primary);
+  border: 2px solid var(--color-primary);
 }
 
 .dropdown-icon {
@@ -279,6 +281,7 @@
 
 .dropdown-item:hover .dropdown-icon {
   transform: scale(1.05);
+ 
 }
 
 .dropdown-item span {
