--- a/footer.css
+++ b/footer.css
@@ -7,7 +7,7 @@
 @media (max-width: 879px) {
  .site-footer {
   width: 878px;
-  height: 424px;
+  height: 500px;
   background-color:rgba(246, 246, 246, 1);
   }
 }
@@ -17,7 +17,7 @@
   margin-top: 48px;
   padding-top: 38px;
   padding-bottom: 40px;
-  border-top: 1px solid #e5e5e5;
+  /* border-top: 1px solid #e5e5e5; */
   background-color: #FFFFFF;
   width: 100%;
   
@@ -78,7 +78,7 @@
   border-radius: var(--border-radius);
   color: var(--color-primary);
   font-family: var(--font-family-base);
-  font-size: var(--font-size-base);
+  font-size: 18px;
   font-weight: 600;
   padding: 8px 24px;
   text-decoration: none;
@@ -108,6 +108,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+
 }
 
 .site-footer__contact-us {
@@ -237,8 +238,8 @@
     /* grid-template-columns: repeat(1, 1fr); */
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    padding: 16px;
+    gap: 2px;
+    padding: 16px 16px 0 16px;
   }
 
   .site-footer__section {
@@ -257,30 +258,35 @@
   }
 
   .site-footer__bottom-container {
-    flex-direction: column;
-    gap: 30px;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    text-align: center;
+    padding: 0 71px;
+    height: 100%;
   }
 
   .site-footer__company-info {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    gap: 24px;
   }
 
   .site-footer__legal-links {
     margin-left: 0;
-    align-items: center;
+    flex-direction: row;
+    gap: 24px;
   }
 
   .site-footer__right-section {
-    flex-direction: column;
-    gap: 30px;
+    flex-direction: row;
+    align-items: center;
+    gap: 24px;
   }
 
   .site-footer__copyright {
     text-align: center;
     padding: 0 20px;
+    margin-top: 34px;
   }
 }
 
@@ -304,7 +310,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 879px) {
   .site-footer__grid {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -321,15 +327,31 @@
   }
 
   .site-footer__company-info {
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
+    gap: 296px;
   }
 
   .site-footer__legal-links {
     margin-left: 0;
     margin-top: 20px;
+    flex-direction: column;
+    gap: 10px;
+    align-items: anchor-center;
   }
-}
+
+  .site-footer__link  {
+    word-spacing: 6px;
+  }
+
+ .site-footer__address {
+    word-spacing: 3px;
+    font-family: var(--font-family-base);
+  font-size: var(--font-size-base);
+  } 
+   
+ }
+
 
 @media (max-width: 480px) {
   .site-footer__grid {
