style(customer-visits): enhance styling and layout for reservation section
- Add new CSS variables for light blue and dark gray colors to improve theming.
- Implement styles for "Start a new reservation" and "Continue with an existing reservation" sections, including typography and button styles.
- Introduce a "Customer Visit Planner" title and descriptive text for better user guidance.
- Refine layout and spacing for improved visual hierarchy and readability.

--- a/common.css
+++ b/common.css
@@ -1,14 +1,18 @@
 :root {
+  --color-light-blue: #00a8e4;
   --color-black: #000;
   --color-orange: #d97a24;
   --color-gray: #333;
   --color-light-gray: #666;
+  /* #57585A */
+  --color-dark-gray: #57585a;
   --color-primary: #075697;
   --color-white: #fff;
   --border-radius: 21px;
-  --font-family-base: 'HelveticaCE', sans-serif;
+  --font-family-helvetic-ce: 'HelveticaCE', sans-serif;
   --font-family-helvetic-condensed-bold: 'Helvetica-Condensed-Bold', sans-serif;
   --font-family-helvetic-condensed: 'Helvetica-Condensed', sans-serif;
+  --font-family-helvetic-ce-bold: 'HelveticaCE-CondBold', sans-serif;
   --font-size-base: 14px;
   --font-size-nav: 18px;
   --transition-base: all 0.2s ease-in-out;
